exercises/dualstack/echo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  labels:
    day: day2
    sample: dualstack
spec:
  selector:
    day: day2
    sample: dualstack
    layer: echo-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
